--- a/index.html
+++ b/index.html
@@ -10,14 +10,38 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <div class="container-fluid">
+<div class="row">
+    <div class="col-4">
+          <a class="navbar-brand" href="#">
+            <img src="img/Bootstrap_logo.svg.png" alt="Bootstrap" width="30" height="24">
+            </a>
+         </div>
+    <div class="col-2"><a href="#">Home</a></div>
+    <div class="col-2"><a href="#">Home</a></div>
+    <div class="col-2"><a href="#">Home</a></div>
+    <div class="col-2"><a href="#">Home</a></div>
+</div>
+    <div class="row jumbotron">
+        <div class="col"><h1>y</h1></div>
+    </div>
+    <div class="row">
+        <div class="col"><h1>y</h1></div>
+        <div class="col"><h1>y</h1></div>
+        <div class="col"><h1>y</h1></div>
+        <div class="col"><h1>y</h1></div>
+    </div>
+    <div class="row">
+        <div class="col"><h1>y</h1></div>
+    </div>
 
 
 
-    
 
 
 
 
 
+    </div>
   </body>
 </html>
