--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -22,14 +23,18 @@
     <div class="col-2"><a href="#">Home</a></div>
     <div class="col-2"><a href="#">Home</a></div>
 </div>
-    <div class="row jumbotron">
-        <div class="col"><h1>y</h1></div>
+    <div class="row jumbotron justify-content-center align-items-center">
+        <div class="col-5"><h1>text</h1><br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam unde harum aspernatur nihil totam suscipit quidem corrupti, id ab earum sed ex qui aliquid eum quam minus mollitia hic laboriosam!</p><br>
+      <div class="btn btn-success">learn more</div></div>
+        <div class="col-5 text-center"><svg xmlns="http://www.w3.org/2000/svg" height="300px" viewBox="0 -960 960 960" width="300px" fill="#EA33F7"><path d="M480-80 120-280v-400l360-200 360 200v400L480-80ZM364-590q23-24 53-37t63-13q33 0 63 13t53 37l120-67-236-131-236 131 120 67Zm76 396v-131q-54-14-87-57t-33-98q0-11 1-20.5t4-19.5l-125-70v263l240 133Zm40-206q33 0 56.5-23.5T560-480q0-33-23.5-56.5T480-560q-33 0-56.5 23.5T400-480q0 33 23.5 56.5T480-400Zm40 206 240-133v-263l-125 70q3 10 4 19.5t1 20.5q0 55-33 98t-87 57v131Z"/></svg></div>
     </div>
-    <div class="row">
-        <div class="col"><h1>y</h1></div>
-        <div class="col"><h1>y</h1></div>
-        <div class="col"><h1>y</h1></div>
-        <div class="col"><h1>y</h1></div>
+    <div class="row text-center">
+        <div class="col"><img src="img/amazonlogo.png" height="200" width="250"></div>
+        <div class="col"><img src="img/shazamlogo.png" height="150" width="250"></div>
+        <div class="col"><img src="img/slacklogo.png" height="150" width="250"></div>
+        <div class="col"><img src="img/githublogo.jpg" height="150" width="250"></div>
+        <div class="col"><img src="img/Sheinlogo.png" height="150" width="250"></div>
     </div>
     <div class="row">
         <div class="col"><h1>y</h1></div>
